[project]
name = "rivuletpy"
version = "0.3.0"
description = "Rivuletpy: a powerful tool to automatically trace single neurons from 3D light microscopic images."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "RivuletStudio" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "cython>=3.1.3",
    "matplotlib>=3.10.6",
    "nibabel>=5.3.2",
    "numpy>=2.2.6",
    "pyglet>=2.1.8",
    "pylibtiff>=0.6.1",
    "scikit-fmm>=2025.6.23",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "simpleitk>=2.5.2",
    "tqdm>=4.67.1",
]
# dependencies = [
#     "numpy>=1.23.3,<2.0.0",
#     "scipy>=1.9.1,<2.0.0",
#     "Cython>=0.29.32,<0.30.0",
#     "scikit-fmm>=2023.4.2,<2024.0.0",
#     "scikit-image>=0.22,<0.23",
#     "matplotlib>=3.6.0,<4.0.0",
#     "nibabel>=4.0.2,<5.0.0",
#     "pyglet>=1.5.27,<2.0.0",
#     "tqdm>=4.64.1,<5.0.0",
#     "pylibtiff>=0.6.1,<1.0.0",
#     "SimpleITK>=2.2.0,<3.0.0",
# ]

[build-system]
requires = ["setuptools>=74.1", "wheel", "numpy", "Cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rivuletpy*"]
